@@ -314,11 +314,13 @@ private:
 
 	int movement_cost_internal(t_translation::t_letter terrain, int recurse_count=0) const;
 	bool has_ability_by_id(const std::string& ability) const;
+	void remove_ability_by_id(const std::string& ability);
 
 	config cfg_;
 	config movement_b_;
 	config defense_b_;
 	config resistance_b_;
+		config abilities_b_;
 
 	std::vector<std::string> advances_to_;
 	std::string id_;
