@@ -105,6 +105,7 @@ Version 1.3.6+svn:
    * there's a new "Game Settings" window which shows the basic game settings
      for each player, accessible through the "More" button in the "Status Table"
  * WML engine:
+   * added effect types new_ability and remove_ability using [abilities] subkey
    * now [base_unit]id= inside [unit] can extend upon existing unit types
    * new tag [filter_radius] to allow greater control over radius expansion
      when using the standard location filter
